--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,30 @@
 .App {
   text-align: center;
 }
+.content{
+
+    width: 100%;
+    height:100%;
+  }
+  
+  body {
+      background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+      background-size: 400% 400%;
+      animation: gradient 15s ease infinite;
+  }
+  
+  @keyframes gradient {
+      0% {
+          background-position: 0% 50%;
+      }
+      50% {
+          background-position: 100% 50%;
+      }
+      100% {
+          background-position: 0% 50%;
+      }
+  }
+
 
 .App-logo {
   height: 40vmin;
@@ -14,14 +38,35 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(15px + 2vmin);
+  color:  #de094c;
+}
+input{
+  width: 300px;
+  height: 35px;
+  align-self: center;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 10px;
+  border: 2px solid #beb3f7;
+  font-size: medium;
+  transition: transparent;
+   background-color: transparent;
+   padding: 1%;
+     filter: blur();
+     margin: 0%;
+     outline: none;
+  
+}
+.searchblock{
+display: flex;
+justify-content: center;
 }
 
 .App-link {
@@ -36,3 +81,77 @@
     transform: rotate(360deg);
   }
 }
+.movie-list{
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.p20{
+  padding: 20px;
+}
+.listcontainer{
+  padding: 20px;
+  width: 100%;
+ max-width: 600px;
+}
+
+.container__text{
+  padding-left:20px;
+}
+
+.container {
+  
+  border-radius: 15px;
+  margin-bottom: 10px;
+  position: relative;
+  display: flex;
+  
+  box-shadow: 0 15px 20px rgba(0, 0, 0, 0.356); 
+  
+ }
+
+ .container img {
+  width: 200px;
+  height: 200px;
+  border-radius: 15px 0 0 15px;
+ }
+.container .btn {
+ 
+  border: none;
+  outline: none;
+  display: flex;
+  align-items: center;
+  background-color: #abb5db;
+  color: blue;
+  padding: 12px 7px;
+  font-size: 17px;
+  text-transform: uppercase;
+  border-radius: 15px;
+  cursor: pointer;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.294);
+  margin-top: 15px;
+ }
+ 
+ .container__text h1 {
+  color: black;
+  font-weight: 400;
+ }
+  .container__text__star span {
+   font-size: 0.8rem;
+   color: #ffa800;
+   margin: -5px 0 20px;
+  }
+  p {
+   font-size: 0.9rem;
+  }
+  .container__text__timing {
+   display: flex;
+   margin: 20px 0 10px;
+   
+  }
+
+  .container__text__timing_time {
+    margin-right: 40px;
+   }
+  
